# extracting-paragraphs

./: .gitgnore  README.md  pyproject.toml  requirements.txt
V2/: 01-generate-groq.ipynb  02-gemma9b-genscript-causal-scrubbing.py  02-gemma9b-genscript-cheat-only.py  02-gemma9b-genscript-transfer-only.py  02-gemma9b-genscript.py  03-AB-compare.py  03-attention-plots.py  04-tsne-violin-plots.py  topics.txt
code/: 01-generate-groq.py  02-genscript.py  03-plots.py
data/: getNewline.xlsx  latest_neutral1_generation.jsonl  latest_neutral2_generation.jsonl  latest_orig_generation.jsonl  promptsV1.csv
data/gemma9b/: AB1_a_b_scrubbed_transferred_generations.jsonl  AB1_a_b_untampered_generations.jsonl  AB1_b_a_scrubbed_transferred_generations.jsonl  AB2.1_a_to_b_scrubbed_transferred_generations.jsonl  AB2.1_b_to_a_scrubbed_transferred_generations.jsonl  AB2.1_reference.jsonl  AB2_a_to_b_scrubbed_transferred_generations.jsonl  AB2_b_to_a_scrubbed_transferred_generations.jsonl  AB2_reference.jsonl  AB3.1_a_to_b_scrubbed_transferred_generations.jsonl  AB3.1_b_to_a_scrubbed_transferred_generations.jsonl  AB3.1_reference.jsonl  AB3_a_to_b_scrubbed_transferred_generations.jsonl  AB3_b_to_a_scrubbed_transferred_generations.jsonl  AB3_reference.jsonl  V2.1_in-context_generation.jsonl  V2.1_orig_generation.jsonl  V2_in-context_generation.jsonl  V2_neutral0_generation.jsonl  V2_neutral10_generation.jsonl  (+10 more)
src/: 01-gemma9b-genscript.py  01-original-generations.py  02-attention-plots.ipynb  02-generate-comparisons.py  03-attention-plots.py  04-tsne-violin-plots.py
(+41 files in other folders)
